# fifteen-layout-generator

./: .gitignore  .gitmodules  CMakeLists.txt  README.org  flake.nix  solve.cpp
.github/workflows/: linux-build.yml
